# yace

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Cargo.toml  instructions.db  riscv-instructions.db  riscv-instructions.sql  rustfmt.toml  test.db  x86-instructions.db  x86-instructions.sql
codegen/: Cargo.toml
codegen/src/: lib.rs  risc-v.rs  x86.rs
docs/: CMakeLists.txt  main_page.md  onwer_vs_unique_ptr.md  options_cxx17.md  style_guide.md
include/yace/: foundation.h
include/yace/assembler/: x86.h
include/yace/assembler/x86/: basic_assembler.h  byte_emit_assembler.h  constexpr_assembler.h  options.h
include/yace/foundation/: algorithm.h  defines.h  options.h  sanity_checks.h  string_table.h  types.h
lib/: CMakeLists.txt  Cargo.toml
lib/assembler/x86/: CMakeLists.txt  dummy.cc
lib/foundation/: CMakeLists.txt
lib/src/: lib.rs
lib/src/assembler/: emitter.rs  enums.rs  ia32.rs  mod.rs  rv32e.rs  rv32i.rs  rv64i.rs  x86-64.rs
lib/src/assembler/mc/: mod.rs  native-code-tests.rs  native-code.rs  native_code.rs  numbered-labels.rs  numbered_labels.rs
lib/src/assembler/risc-v/: basic-assembler.rs  basic_assembler.rs  immediates-tests.rs  immediates.rs  macros.rs  mod.rs  operands.rs  tests.rs
lib/src/assembler/x86/: address.rs  assembler_instructions.rs  basic-assembler.rs  basic_assembler.rs  emit-instruction-bytes.rs  emit_instruction_bytes.rs  implementation.rs  macros.rs  mod.rs  operands.rs  tests.rs
lib/src/disassembler/: mod.rs  producer.rs  receiver.rs  rv32e.rs  rv32i.rs  rv64i.rs
lib/src/disassembler/risc-v/: immediates.rs  macros.rs  mod.rs  operands.rs  tables.rs
src/: lib.rs
src/assembler/: mod.rs
src/assembler/x86/: basic_assembler.rs  mod.rs
tests/: CMakeLists.txt
tests/assembler/x86/: CMakeLists.txt  modrm_address_static.cc  test_assembler.h
utils/: Cargo.toml  gen-csr-register-names.rs  gen-rvc-tables.rs
