[package]
name = "yace-codegen"
version = "0.0.1"
authors = ["Igor Pavlychev <zdemia@mail.ru>"]
description = "Procedural macros for ğ”œğ”„â„­ğ”ˆ."
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
futures = "0.3"
lazy_static = "1.4"
maplit = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1.10.0", features = [ "macros" ] }
