[package]
name = "yace-codegen"
version = "0.0.1"
authors = ["Igor Pavlychev <zdemia@mail.ru>"]
description = "Procedural macros for ğ”œğ”„â„­ğ”ˆ."
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
futures = "0.3"
indoc = "2"
maplit = "1"
once_cell = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1", features = [ "macros" ] }
