[package]
name = "yace"
version = "0.0.1"
authors = ["Igor Pavlychev <zdemia@mail.ru>"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yace-codegen = { version = "=0.0.1", path = "../codegen" }

[features]
slow-tests = ["std"]
std = []
